<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidBluetooch</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="scan_device">扫描设备</string>
    <string name="has_connectdevice_text">已配对设备</string>
    <string name="hasnot_connectdevice_text">未配对设备</string>
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="btn_send">发送</string>
    <string name="btn_disconnect">断开连接</string>

</resources>